2009-01-30  Chris Morley

	* src/formats/chemkinformat.cpp: Move initialization into a
	separate function Init()
	
	Change option -al to -aL (Reactions have labels) to avoid conflict
	with other formats
	
	* src/formats/xml/cmlformat.cpp: Correct floatg error in CML1 output.
	Added generic WriteScalarProperties()
	Output molecular spinMultiplicity as a property, not an attribute.
	On outputing a property, if the title has a namespace use dictRef
	rather than title.
	Output (non-zero) energy from OBMOl::GetEnergy as a property in kJ/mol
	Output a negative vibrational frequency as imaginaryFrequency
		 
	* src/formats/xml/cmlreactformat.cpp: Ensure OBText strings go to
	the original output stream. (Stream may change to output moleculeList
	first.)
	Add reversible attribute on reactions.

2009-01-19  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/format.h (OpenBabel): Fix PR#2070342. Make
	sure format modules properly inherit GetMIMEType(). Breaks library
	ABI, which is fine for v2.3.

2008-12-13  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/outformat.cpp: New format to read files with
	extensions .dat, .log, .out and try to guess the format based on
	contents. Currently works with many GAMESS, Gaussian, MOPAC,
	Q-Chem, Jaguar, and MPQC files.

2008-12-12  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/typer.cpp: Fix for PR#2017902 -- bug introduced by r2578 in
	detecting guanidinium C atoms.

 	* data/element.txt, data/atomtyp.txt: Minor changes. Allow boron
	to have 4 bonds and adjust implicit valence for several elements.

2008-12-02  Chris Morley

	* src/tokenst.cpp, include/openbabel/tokenst.h: Add function
	to ignore istream up to a specified string.
	
	* src/formats/mdlformat.cppReadMolecule): give no warning if
	there are blank lines at the end of the file.
	(SkipObjects): rewrite to prevent confusion by $ chars in
	properties. Should hve been done long ago.
